welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:1: error: method estAdo has return statement; needs result type
def estAdo(a:Int)= {return ((a>12)&&(a<20))}
                    ^